[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/assets/ui/UI/grey_button04.png" type="Texture" id=1]
[ext_resource path="res://src/assets/fonts/Minecraftia.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/assets/ui/UI/grey_button13.png" type="Texture" id=3]
[ext_resource path="res://src/assets/ui/UI/arrow-UP.png" type="Texture" id=4]
[ext_resource path="res://src/assets/Controls.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0.0784314, 0.517647, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 2 )

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -662, 101 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( -815, 32 )
color = Color( 0, 0, 0, 1 )

[node name="Heading" type="Label" parent="ColorRect"]
margin_left = 51.0
margin_top = 13.0
margin_right = 412.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "CONTROLS"

[node name="Panel" type="Panel" parent="ColorRect"]
margin_left = 53.0
margin_top = 145.0
margin_right = 473.0
margin_bottom = 480.0

[node name="TopLeftRet" type="Label" parent="ColorRect/Panel"]
margin_left = 15.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "PLAYER 1:"

[node name="SpaceButton" type="Sprite" parent="ColorRect/Panel"]
position = Vector2( 100, 82.25 )
scale = Vector2( 0.747368, 0.877778 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="ColorRect/Panel"]
margin_left = 53.0
margin_top = 63.0
margin_right = 153.0
margin_bottom = 103.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SPACE"

[node name="JumpLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 222.0
margin_top = 61.0
margin_right = 352.0
margin_bottom = 100.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 4 )
text = "= JUMP"

[node name="MoveLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 219.0
margin_top = 155.0
margin_right = 349.0
margin_bottom = 194.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 4 )
text = "= MOVE"

[node name="InteractLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 221.0
margin_top = 262.0
margin_right = 420.0
margin_bottom = 301.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 4 )
text = "= INTERACT"

[node name="WSquare" type="Sprite" parent="ColorRect/Panel"]
position = Vector2( 99, 149 )
texture = ExtResource( 3 )

[node name="WLabel" type="Label" parent="ColorRect/Panel/WSquare"]
margin_left = -6.0
margin_top = -16.0
margin_right = 11.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "W"

[node name="ASquare" type="Sprite" parent="ColorRect/Panel"]
position = Vector2( 38, 202 )
texture = ExtResource( 3 )

[node name="ALabel" type="Label" parent="ColorRect/Panel/ASquare"]
margin_left = -9.0
margin_top = -17.0
margin_right = 8.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "A"

[node name="DSquare" type="Sprite" parent="ColorRect/Panel"]
position = Vector2( 99, 202 )
texture = ExtResource( 3 )

[node name="SLabel" type="Label" parent="ColorRect/Panel/DSquare"]
margin_left = -7.0
margin_top = -17.0
margin_right = 10.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "S"

[node name="SSquare" type="Sprite" parent="ColorRect/Panel"]
position = Vector2( 163, 201 )
texture = ExtResource( 3 )

[node name="DLabel2" type="Label" parent="ColorRect/Panel/SSquare"]
margin_left = -8.0
margin_top = -16.0
margin_right = 9.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "D"

[node name="FSquare" type="Sprite" parent="ColorRect/Panel"]
position = Vector2( 99, 286 )
texture = ExtResource( 3 )

[node name="WLabel2" type="Label" parent="ColorRect/Panel/FSquare"]
margin_left = -7.0
margin_top = -20.0
margin_right = 10.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "F"

[node name="Panel2" type="Panel" parent="ColorRect"]
margin_left = 543.0
margin_top = 142.0
margin_right = 963.0
margin_bottom = 477.0

[node name="TopLeftRet" type="Label" parent="ColorRect/Panel2"]
margin_left = 15.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "PLAYER 2:"

[node name="SpaceButton" type="Sprite" parent="ColorRect/Panel2"]
position = Vector2( 100, 82.25 )
scale = Vector2( 0.747368, 0.877778 )
texture = ExtResource( 1 )

[node name="SpaceLabel" type="Label" parent="ColorRect/Panel2/SpaceButton"]
margin_left = -42.9437
margin_top = -20.0
margin_right = 59.0563
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SHIFT"

[node name="JumpLabel" type="Label" parent="ColorRect/Panel2"]
margin_left = 222.0
margin_top = 61.0
margin_right = 352.0
margin_bottom = 100.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 4 )
text = "= JUMP"

[node name="MoveLabel" type="Label" parent="ColorRect/Panel2"]
margin_left = 219.0
margin_top = 155.0
margin_right = 349.0
margin_bottom = 194.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 4 )
text = "= MOVE"

[node name="InteractLabel" type="Label" parent="ColorRect/Panel2"]
margin_left = 221.0
margin_top = 262.0
margin_right = 420.0
margin_bottom = 301.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 4 )
text = "= INTERACT"

[node name="WSquare" type="Sprite" parent="ColorRect/Panel2"]
position = Vector2( 99, 149 )
texture = ExtResource( 3 )

[node name="Arrow-Up" type="Sprite" parent="ColorRect/Panel2/WSquare"]
position = Vector2( 0, -2 )
scale = Vector2( 0.04125, 0.0425 )
texture = ExtResource( 4 )

[node name="ASquare" type="Sprite" parent="ColorRect/Panel2"]
position = Vector2( 38, 202 )
texture = ExtResource( 3 )

[node name="Arrow-Left" type="Sprite" parent="ColorRect/Panel2/ASquare"]
position = Vector2( -2, 2.00003 )
rotation = -1.57102
scale = Vector2( 0.0518751, 0.05 )
texture = ExtResource( 4 )

[node name="DSquare" type="Sprite" parent="ColorRect/Panel2"]
position = Vector2( 99, 202 )
texture = ExtResource( 3 )

[node name="Arrow-Down" type="Sprite" parent="ColorRect/Panel2/DSquare"]
position = Vector2( 1.00012, 2 )
rotation = 3.13177
scale = Vector2( 0.0518751, 0.05 )
texture = ExtResource( 4 )

[node name="SSquare" type="Sprite" parent="ColorRect/Panel2"]
position = Vector2( 163, 201 )
texture = ExtResource( 3 )

[node name="Arrow-Right" type="Sprite" parent="ColorRect/Panel2/SSquare"]
position = Vector2( 2, 3.05176e-05 )
rotation = 1.56368
scale = Vector2( 0.0518751, 0.05 )
texture = ExtResource( 4 )

[node name="InteractLabel2" type="Sprite" parent="ColorRect/Panel2"]
position = Vector2( 100, 283.25 )
scale = Vector2( 0.747368, 0.877778 )
texture = ExtResource( 1 )

[node name="EnterLabel" type="Label" parent="ColorRect/Panel2/InteractLabel2"]
margin_left = -48.169
margin_top = -19.6519
margin_right = 50.831
margin_bottom = 20.3481
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "ENTER"

[node name="GoBackButton" type="Button" parent="ColorRect"]
margin_left = 53.0
margin_top = 528.0
margin_right = 275.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 6 )
text = "GO BACK"

[connection signal="pressed" from="ColorRect/GoBackButton" to="." method="_on_GoBackButton_pressed"]
